# goodhr

./: .gitignore  AGENTS.md  README.en.md  README.md  background.js  config.js  manifest.json  user.json  安装说明.txt  新建 文本文档.html  旧项目流程总结.md
.trae/: mcp.json
2.0py/: README.md  ai_analyzer.py  ai_config.json  ai_config.py  api_client.py  automation.py  candidate_handler.py  config.json  config_manager.py  eel_app.py  main.py  platform_config.json  (+4 more)
goodhr5/local-agent/: .gitignore  README.md  launcher.py  pyproject.toml  test_ocr.py  test_windows_ocr.py  打包.md  接口.md
goodhr5/local-agent/app/: __init__.py  boss_runtime.py  browser.py  browser_profile.py  console.py  console_update.py  cookie_crypto.py  crypto_keys.py  element_refs.py  humanize.py  local_ai.py  local_ai_decision.py  local_db.py  local_positions.py  local_records.py  local_runner.py  local_tasks.py  machine.py  main.py  ocr.py  paths.py  profiles.py  rules_update.py  screenshot.py  session.py  settings.py  sound.py  tasks.py  vision_ai.py  ws_client.py
goodhr5/local-agent/assets/icons/: goodhr-logo.icns
goodhr5/local-agent/packaging/: GoodHRLocalAgent.iss  GoodHRLocalAgent.spec  build_mac.sh  build_mac_full.sh  build_windows.ps1  build_windows_full.bat  build_windows_installer.bat  create_windows_shortcut.ps1  prepare_vendor.py  启动失败.txt
goodhrpy/: .env.example  .gitignore  config.yaml.example  login.py  main.py  pyproject.toml  start.sh
goodhrpy/core/: __init__.py  browser.py  humanize.py  settings.py  task.py
goodhrpy/core/filter/: __init__.py  ai_filter.py  keyword.py
goodhrpy/core/platform/: __init__.py  base.py  boss.py  zhaopin.py
goodhrpy/models/: __init__.py  candidate.py  database.py  position.py  task_log.py
goodhrpy/utils/: __init__.py  logger.py  ocr.py  text.py
goodhrpy/web/: __init__.py  app.py
goodhrpy/web/api/: __init__.py  candidate.py  config_api.py  login_api.py  position.py  screenshot_api.py  task.py
goodhrpy/web/static/: index.html
(+725 files in other folders)
