[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goodhrpy"
version = "0.1.0"
description = "GoodHR 自动化候选人筛选和沟通工具，基于 CloakBrowser 隐身浏览器"

requires-python = ">=3.10"
authors = [
    { name = "邓云川", email = "1224299352@qq.com" },
]

dependencies = [
    "cloakbrowser>=0.3",
    "playwright>=1.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
goodhrpy = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["core", "models", "web", "utils"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
