[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goodhr5-local-agent"
version = "0.1.0"
description = "GoodHR 5 本地执行器 - 负责 CloakBrowser 控制、页面操作、截图、OCR"

requires-python = ">=3.10"
authors = [
    { name = "邓云川", email = "1224299352@qq.com" },
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "cloakbrowser>=0.3",
    "playwright>=1.40",
    "Pillow>=10.0",
    "numpy>=1.24",
    "rapidocr>=2.0.6",
    "onnxruntime>=1.17",
    "cryptography>=41.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
